# GAF

./: .gitignore  README.md  URL-download-2.txt
KG-GML/codebase/sparqling-genomics-0.99.11/: Makefile  Makefile.am  config.status  configure  configure.ac  env  env.in  environment.scm
KG-GML/codebase/sparqling-genomics-0.99.11/autom4te.cache/: output.0
KG-GML/codebase/sparqling-genomics-0.99.11/doc/: Makefile.in  implemented-ontologies.tex  information-retrieval.tex  introduction.tex  sparqling-genomics.tex  web-interface.tex
KG-GML/codebase/sparqling-genomics-0.99.11/ontologies/: sparqling-genomics.ttl
KG-GML/codebase/sparqling-genomics-0.99.11/tools/: Makefile.in
KG-GML/codebase/sparqling-genomics-0.99.11/tools/bam2rdf/: Makefile.am
KG-GML/codebase/sparqling-genomics-0.99.11/tools/bam2rdf/include/: ontology.h  runtime_configuration.h
KG-GML/codebase/sparqling-genomics-0.99.11/tools/bam2rdf/src/: bam_header.c  ontology.c  ui.c
KG-GML/codebase/sparqling-genomics-0.99.11/tools/common/include/: list.h
KG-GML/codebase/sparqling-genomics-0.99.11/tools/common/src/: helper.c  list.c
KG-GML/codebase/sparqling-genomics-0.99.11/tools/ega2rdf/: Makefile.am  Makefile.in  ega2rdf.in
KG-GML/codebase/sparqling-genomics-0.99.11/tools/folder2rdf/: Makefile.am  folder2rdf
KG-GML/codebase/sparqling-genomics-0.99.11/tools/json2rdf/: Makefile  Makefile.in
KG-GML/codebase/sparqling-genomics-0.99.11/tools/json2rdf/include/: json.h  ontology.h
KG-GML/codebase/sparqling-genomics-0.99.11/tools/json2rdf/src/: main.c  ontology.c  runtime_configuration.c  ui.c
KG-GML/codebase/sparqling-genomics-0.99.11/tools/table2rdf/: Makefile.in  table2rdf
KG-GML/codebase/sparqling-genomics-0.99.11/tools/table2rdf/include/: ontology.h
KG-GML/codebase/sparqling-genomics-0.99.11/tools/table2rdf/src/: ontology.c  runtime_configuration.c  table.c  ui.c
KG-GML/codebase/sparqling-genomics-0.99.11/tools/table2rdf/tests/: sample.csv
KG-GML/codebase/sparqling-genomics-0.99.11/tools/vcf2rdf/include/: ui.h  vcf_variants.h
KG-GML/codebase/sparqling-genomics-0.99.11/tools/vcf2rdf/src/: ontology.c  runtime_configuration.c  vcf_variants.c
KG-GML/codebase/sparqling-genomics-0.99.11/tools/vcf2rdf/tests/: sample.vcf
KG-GML/codebase/sparqling-genomics-0.99.11/tools/virtuoso-config/: Makefile.am  virtuoso-config.in
KG-GML/codebase/sparqling-genomics-0.99.11/tools/xml2rdf/: Makefile  Makefile.am  xml2rdf
KG-GML/codebase/sparqling-genomics-0.99.11/tools/xml2rdf/include/: runtime_configuration.h  xml.h
KG-GML/codebase/sparqling-genomics-0.99.11/tools/xml2rdf/src/: main.c  ontology.c  runtime_configuration.c  ui.c  xml.c
KG-GML/codebase/sparqling-genomics-0.99.11/tools/xml2rdf/tests/: input.xml
KG-GML/codebase/sparqling-genomics-0.99.11/web/: Makefile.am  Makefile.in  guile.am  sg-auth-manager.in  sg-auth-manager.xml  sg-web-test.in  sg-web.service.in
KG-GML/codebase/sparqling-genomics-0.99.11/web/auth-manager/: api.scm  config-reader.scm  config.scm  permission-check.scm  proxy.scm  virtuoso.scm
KG-GML/codebase/sparqling-genomics-0.99.11/web/ldap/: authenticate.scm.in
KG-GML/codebase/sparqling-genomics-0.99.11/web/sparql/: driver.scm
KG-GML/codebase/sparqling-genomics-0.99.11/web/static/css/: datatables.min.css  main.css
KG-GML/codebase/sparqling-genomics-0.99.11/web/static/js/: import.js  plottable-query.js  prompt.js
KG-GML/codebase/sparqling-genomics-0.99.11/web/www/: config-reader.scm  html.scm  pages.scm  requests-api.scm  util.scm
KG-GML/codebase/sparqling-genomics-0.99.11/web/www/components/: project-graphs.scm  sessions.scm
KG-GML/codebase/sparqling-genomics-0.99.11/web/www/db/: cache.scm  connections.scm  graphs.scm  projects.scm  prompt.scm  sessions.scm
KG-GML/codebase/sparqling-genomics-0.99.11/web/www/pages/: automate.scm  connection-failure.scm  create-project.scm  dashboard.scm  edit-connection.scm  error.scm  login.scm  project-details.scm  prompt-session-table.scm  prompt.scm  query-history.scm  query-response.scm  report.scm
VariantKG/codebase/sparqling-genomics-0.99.11/doc/: Makefile  Makefile.am  command-line-tools.tex  information-management.tex  knowledge-graph.tex  programming-with-sparql.tex  sparqling-genomics.sty  sparqling-genomics.sty.in
VariantKG/codebase/sparqling-genomics-0.99.11/tools/: Makefile  Makefile.am
VariantKG/codebase/sparqling-genomics-0.99.11/tools/bam2rdf/: Makefile  Makefile.in  bam2rdf
VariantKG/codebase/sparqling-genomics-0.99.11/tools/bam2rdf/include/: bam_header.h  bam_reads.h  ui.h
VariantKG/codebase/sparqling-genomics-0.99.11/tools/bam2rdf/src/: bam_reads.c  main.c  runtime_configuration.c
VariantKG/codebase/sparqling-genomics-0.99.11/tools/common/include/: helper.h  master-ontology.h
VariantKG/codebase/sparqling-genomics-0.99.11/tools/ega2rdf/: Makefile  ega2rdf
VariantKG/codebase/sparqling-genomics-0.99.11/tools/folder2rdf/: Makefile  Makefile.in  folder2rdf.in
VariantKG/codebase/sparqling-genomics-0.99.11/tools/json2rdf/: Makefile.am  json2rdf
VariantKG/codebase/sparqling-genomics-0.99.11/tools/json2rdf/include/: runtime_configuration.h
VariantKG/codebase/sparqling-genomics-0.99.11/tools/json2rdf/src/: json.c
VariantKG/codebase/sparqling-genomics-0.99.11/tools/table2rdf/: Makefile  Makefile.am
VariantKG/codebase/sparqling-genomics-0.99.11/tools/table2rdf/include/: runtime_configuration.h  table.h  tools.h  ui.h
VariantKG/codebase/sparqling-genomics-0.99.11/tools/table2rdf/src/: main.c  tools.c
VariantKG/codebase/sparqling-genomics-0.99.11/tools/table2rdf/tests/: headerless.tsv  sample.tsv
VariantKG/codebase/sparqling-genomics-0.99.11/tools/vcf2rdf/: Makefile  Makefile.am  Makefile.in  vcf2rdf
VariantKG/codebase/sparqling-genomics-0.99.11/tools/vcf2rdf/include/: ontology.h  runtime_configuration.h  vcf_header.h
VariantKG/codebase/sparqling-genomics-0.99.11/tools/vcf2rdf/src/: main.c  ui.c  vcf_header.c
VariantKG/codebase/sparqling-genomics-0.99.11/tools/virtuoso-config/: Makefile  Makefile.in  virtuoso-config
VariantKG/codebase/sparqling-genomics-0.99.11/tools/xml2rdf/: Makefile.in
(+341 files in other folders)
